--- a/JR_SOLICITUD.html
+++ b/JR_SOLICITUD.html
@@ -2,231 +2,190 @@
 <html lang="es">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Barra de Navegación — Trámites Ciudadanos</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Solicitud — Trámites Ciudadanos</title>
+
+  <!-- ESTILOS MEJORADOS -->
   <style>
-    /* RESET BÁSICO */
-    * { box-sizing: border-box; margin: 0; padding: 0; }
-    html, body { height: 100%; font-family: Inter, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial; background: #f4f6f8; color: #0f1724; }
-
-    /* BARRA */
-    .navbar {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      gap: 1rem;
-      padding: 0.6rem 1rem;
-      background: linear-gradient(90deg, #ffffff 0%, #f8fafc 100%);
-      border-bottom: 1px solid rgba(15,23,36,0.06);
-      box-shadow: 0 6px 18px rgba(12,27,48,0.04);
-      position: sticky;
-      top: 0;
-      z-index: 50;
+    *{
+      margin:0;
+      padding:0;
+      box-sizing:border-box;
+      font-family:'Segoe UI', Roboto, Arial, sans-serif;
     }
 
-    .brand {
-      display: flex;
-      align-items: center;
-      gap: 0.75rem;
-      text-decoration: none;
-      color: inherit;
-    }
-    .brand .logo {
-      width: 40px; height: 40px; border-radius: 8px;
-      display: grid; place-items: center;
-      background: linear-gradient(135deg,#0ea5a4,#06b6d4);
-      color: white; font-weight: 700;
-      box-shadow: 0 4px 10px rgba(6,95,114,0.12);
-      font-family: "Segoe UI", Roboto, Arial;
-    }
-    .brand .name { font-size: 1.05rem; font-weight: 600; letter-spacing: -0.2px; }
-
-    /* MENU PRINCIPAL */
-    .nav-links {
-      display: flex;
-      gap: 0.5rem;
-      align-items: center;
-    }
-    .nav-item {
-      position: relative;
-      list-style: none;
-    }
-    .nav-link {
-      display: inline-flex;
-      align-items: center;
-      gap: 0.5rem;
-      padding: 0.5rem 0.9rem;
-      border-radius: 8px;
-      text-decoration: none;
-      color: #0f1724;
-      font-weight: 500;
-      font-size: 0.95rem;
-      transition: background .18s, transform .08s;
-    }
-    .nav-link:hover { background: rgba(14,165,132,0.06); transform: translateY(-1px); }
-
-    /* DROPDOWN */
-    .dropdown {
-      position: absolute;
-      top: calc(100% + 10px);
-      left: 0;
-      min-width: 260px;
-      background: white;
-      border-radius: 10px;
-      padding: 0.5rem;
-      box-shadow: 0 12px 30px rgba(8,15,25,0.07);
-      border: 1px solid rgba(12,23,36,0.04);
-      display: none;
-    }
-    .nav-item.show .dropdown { display: block; }
-
-    .dropdown a {
-      display: block;
-      padding: 0.5rem 0.7rem;
-      border-radius: 8px;
-      text-decoration: none;
-      color: #0f1724;
-      font-size: 0.92rem;
-      font-weight: 500;
-    }
-    .dropdown a:hover { background: rgba(6,95,114,0.04); }
-
-    /* ICONOS (SVG) */
-    .icon {
-      width: 18px; height: 18px; display: inline-block; vertical-align: middle;
+    body{
+      background: linear-gradient(135deg,#e0f2fe,#f8fafc);
+      color:#0f172a;
     }
 
-    /* BUSCADOR LIGERO */
-    .search {
-      display: flex;
-      align-items: center;
-      gap: 0.5rem;
-      background: #f1f5f9;
-      padding: 0.35rem 0.5rem;
-      border-radius: 999px;
-      border: 1px solid rgba(15,23,36,0.03);
-      min-width: 220px;
-    }
-    .search input {
-      border: none; background: transparent; outline: none; font-size: 0.95rem;
+    /* HEADER */
+    header{
+      background: linear-gradient(90deg,#0ea5a4,#06b6d4);
+      color:white;
+      padding:1.2rem;
+      text-align:center;
+      font-size:1.6rem;
+      font-weight:700;
+      letter-spacing:1px;
+      box-shadow:0 6px 18px rgba(0,0,0,.15);
     }
 
-    /* BOTON */
-    .btn {
-      padding: 0.5rem 0.9rem;
-      border-radius: 9px;
-      background: linear-gradient(90deg,#06b6d4,#0ea5a4);
-      color: white; text-decoration: none; font-weight: 600;
-      box-shadow: 0 6px 18px rgba(6,95,114,0.12);
-      border: none; cursor: pointer;
+    /* CONTENEDOR */
+    .container{
+      max-width:1000px;
+      margin:2rem auto;
+      padding:1.5rem;
     }
 
-    /* RESPONSIVE: HAMBURGER */
-    .hamburger {
-      display: none;
-      background: transparent;
-      border: none;
-      padding: 0.4rem;
-      border-radius: 8px;
-    }
-    @media (max-width: 880px) {
-      .nav-links { display: none; }
-      .hamburger { display: inline-flex; }
-      .mobile-menu {
-        display: none;
-        position: absolute;
-        top: 64px;
-        left: 0;
-        right: 0;
-        background: white;
-        padding: 0.8rem;
-        border-bottom-left-radius: 12px;
-        border-bottom-right-radius: 12px;
-        box-shadow: 0 14px 50px rgba(10,20,30,0.08);
-      }
-      .mobile-menu.show { display: block; }
-      .search { display: none; }
+    main{
+      background:white;
+      border-radius:16px;
+      padding:2rem;
+      box-shadow:0 10px 30px rgba(0,0,0,.1);
+      animation: fadeIn .8s ease;
     }
 
-    /* CONTENIDO DE EJEMPLO */
-    main { padding: 2rem; max-width: 980px; margin: 0 auto; }
-    .hero {
-      background: linear-gradient(180deg, rgba(6,95,114,0.03), rgba(6,95,114,0.01));
-      border-radius: 12px; padding: 1.4rem; margin-top: 1rem;
-      border: 1px solid rgba(6,95,114,0.03);
+    @keyframes fadeIn{
+      from{opacity:0; transform:translateY(15px);}
+      to{opacity:1; transform:translateY(0);}
     }
-    .hero h1 { font-size: 1.35rem; margin-bottom: 0.6rem; }
-    .list-tramites { display: grid; gap: .5rem; grid-template-columns: repeat(auto-fit,minmax(220px,1fr)); margin-top: .8rem; }
-    .tramite {
-      background: white; padding: .8rem; border-radius: 10px;
-      border: 1px solid rgba(12,23,36,0.04);
-      box-shadow: 0 6px 12px rgba(6,95,114,0.03);
-      font-weight: 600; font-size: .95rem;
+
+    main h2{
+      text-align:center;
+      color:#0284c7;
+      margin-bottom:1rem;
     }
-    .tramite small { display:block; font-weight:400; font-size:.82rem; color:#475569; margin-top:.3rem; }
+
+    main p{
+      text-align:justify;
+      line-height:1.7;
+      margin-bottom:1rem;
+    }
+
+    hr{
+      border:none;
+      height:2px;
+      background:linear-gradient(90deg,#06b6d4,#0ea5a4);
+      margin:1rem 0;
+      border-radius:10px;
+    }
+
+    /* LISTA DE DATOS */
+    .info-box{
+      display:grid;
+      grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
+      gap:1rem;
+      margin-top:1rem;
+    }
+
+    .info-item{
+      background:#f1f5f9;
+      padding:1rem;
+      border-radius:12px;
+      border-left:6px solid #06b6d4;
+      box-shadow:0 4px 10px rgba(0,0,0,.06);
+    }
+
+    .info-item strong{
+      color:#0ea5a4;
+      display:block;
+      margin-bottom:.3rem;
+    }
+
+    /* IMAGEN */
+    .img-box{
+      text-align:center;
+      margin-top:2rem;
+    }
+
+    .img-box img{
+      max-width:320px;
+      width:100%;
+      border-radius:18px;
+      box-shadow:0 10px 25px rgba(0,0,0,.15);
+    }
+
+    /* VIDEO */
+    .video-box{
+      margin-top:2rem;
+      display:flex;
+      justify-content:center;
+    }
+
+    .video-box video{
+      width:100%;
+      max-width:420px;
+      border-radius:18px;
+      box-shadow:0 10px 25px rgba(0,0,0,.18);
+      border:4px solid #06b6d4;
+    }
+
+    /* RESPONSIVE */
+    @media(max-width:600px){
+      header{font-size:1.3rem;}
+      main{padding:1.3rem;}
+    }
   </style>
+</head>
 
+<body>
 
-
-  <body>
-<center>
-<H2><header>꧁༒✨CONCEPTO DE SOLICITUD✨༒꧂</header></H2>
-</center>
+<header>꧁༒✨ CONCEPTO DE SOLICITUD ✨༒꧂</header>
 
 <div class="container">
 
   <main>
-    
-  <H2><P align ="justify"><font face="" color="BLACK">
- Detalles de la Solicitud
-Esta solicitud tiene como objetivo recopilar información esencial para el proceso de registro y validación del solicitante. A continuación, se detallan los datos requeridos y las instrucciones que deben seguirse para completar la solicitud correctamente.
-<HR>
-Datos Necesarios
-<HR>
-Nombre completo: Como aparece en su identificación oficial.
-Correo electrónico: Debe ser uno activo, ya que ahí recibirá confirmación.
-Número de contacto: Teléfono móvil o fijo para comunicación directa.
-<HR>
+    <h2>Detalles de la Solicitud</h2>
 
-Motivo de la solicitud: Explicar brevemente el propósito.
-Documentos adjuntos: Identificación oficial y cualquier documento adicional requerido.
-<HR>
-Proceso de Solicitud
-<HR>
-Complete todos los campos del formulario correctamente.
-Adjunte los documentos solicitados en formato PDF o imagen.
-Revise que toda la información sea correcta antes de enviar.
-<HR>
+    <p>
+      Esta solicitud tiene como objetivo recopilar información esencial para el proceso de registro y validación del solicitante. A continuación, se detallan los datos requeridos y las instrucciones que deben seguirse para completar la solicitud correctamente.
+    </p>
 
-Envíe la solicitud y espere la confirmación por correo electrónico.
-En caso de ser necesario, un representante se comunicará con usted.
-Tiempos de Respuesta
-<HR>
-El tiempo estimado para recibir una respuesta es de entre 24 a 72 horas hábiles. Si su solicitud requiere revisión manual adicional, el tiempo podría extenderse ligeramente. Le agradecemos su comprensión.
+    <hr>
 
-<HR>
-</H3>
-<P align ="/justify">
-   <center>
-  <img src="curp.webp" width="400" height="400" align="center">
- </center>
+    <div class="info-box">
+      <div class="info-item">
+        <strong>Nombre completo</strong>
+        Como aparece en su identificación oficial.
+      </div>
+      <div class="info-item">
+        <strong>Correo electrónico</strong>
+        Debe ser uno activo, ya que ahí recibirá confirmación.
+      </div>
+      <div class="info-item">
+        <strong>Número de contacto</strong>
+        Teléfono móvil o fijo para comunicación directa.
+      </div>
+      <div class="info-item">
+        <strong>Motivo de la solicitud</strong>
+        Explicar brevemente el propósito.
+      </div>
+      <div class="info-item">
+        <strong>Documentos adjuntos</strong>
+        Identificación oficial y documentos requeridos.
+      </div>
+    </div>
 
-           </center>
+    <hr>
+
+    <p>
+      El tiempo estimado para recibir una respuesta es de <strong>24 a 72 horas hábiles</strong>. Si su solicitud requiere revisión adicional, el tiempo podría extenderse ligeramente.
+    </p>
+
+    <div class="img-box">
+      <img src="curp.webp" alt="Documento CURP">
+    </div>
+
+    <div class="video-box">
+      <video controls>
+        <source src="solicitud.mp4" type="video/mp4">
+      </video>
+    </div>
+
   </main>
-
-  
-  <center>
-<video class="videoresponsive"controls><source src="Solicitud.mp4"type="video/mp4"></video>
-      <style>
-          .videoresponsive{
-           width:400px;
-           height:400px
-           justify-content:center;
-           }
- </center>
 
 </div>
 
 </body>
-
 </html>
