--- a/JR_SOLICITUD.html
+++ b/JR_SOLICITUD.html
@@ -179,7 +179,7 @@
 
     <div class="video-box">
       <video controls>
-        <source src="solicitud.mp4" type="video/mp4">
+        <source src="Solicitud.mp4" type="video/mp4">
       </video>
     </div>
 
@@ -189,3 +189,4 @@
 
 </body>
 </html>
+
