Replace image source in JR_SOLICITUD.html
Updated image source in the request details section.

--- a/JR_SOLICITUD.html
+++ b/JR_SOLICITUD.html
@@ -174,7 +174,7 @@
     </p>
 
     <div class="img-box">
-      <img src="curp.webp" alt="Documento CURP">
+      <img src="soli.webp" alt="Documento CURP">
     </div>
 
     <div class="video-box">
@@ -189,4 +189,5 @@
 
 </body>
 </html>
+
 
